# starXin

./: .gitignore  CMakeLists.txt  README.md  main.cpp  main.py
cuda/make/: Makefile  make_know.py
cuda/src/: c_runtime_api.cpp  c_runtime_api.h  cpu_device_api.cpp  cpu_device_api.h  cuda_device_api.cpp  cuda_device_api.h  device_api.h  dlarray.h  gpu_op.cu  runtime_base.h
examples/: __init__.py  mnist.py
interface_py/: __init__.py
interface_py/autodiff/: __init__.py  autodiff.py  executor.py  gradient.py
interface_py/ndarray/: _base.py  ndarray.py  test.py
interface_py/nn/: __init__.py  activations.py  loss_functions.py  utils.py
interface_py/optim/: __init__.py  adam.py  base.py  sgd.py
interface_py/test/: __init__.py  test_ndarray.py
test/: test_autodiff.py  test_cpu.cpp  test_cpu.h
